--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,14 +2,10 @@
 
 html,
 body {
-  height: 100vh;
+  height: 100%;
 }
 
 body {
   margin: 0;
-}
-
-* {
-  box-sizing: border-box;
-  font-family: 'Manrope', Roboto, 'Helvetica Neue', sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
