--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -15,4 +15,6 @@
 
 <mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
 
-<router-outlet></router-outlet>
+<div class="layout">
+  <router-outlet></router-outlet>
+</div>
