--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -10,3 +10,9 @@
   align-items: center;
   justify-content: center;
 }
+
+.layout {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
