KAM-26: [FE] Create post card component Added `reauest-wrapper` and `loader` components. Added `post` component. Changed styles. Added post mocked data for `home` page. Added `mocked error requests` for another pages.

--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,11 +1,11 @@
 .toolbar-content {
   display: flex;
-  max-width: 1200px;
   margin: 0 auto;
 }
 
 .toolbar-logo {
   display: flex;
+  margin-left: 216px;
   flex: 1;
   align-items: center;
   justify-content: center;
