--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -6,8 +6,24 @@
   width: 100%;
 }
 
+.banner {
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.post-title {
+  position: relative;
+
+  app-date {
+    position: absolute;
+    top: -75px;
+  }
+}
+
 .post-hide {
-  max-height: 40px;
+  max-height: 80px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
