--- a/src/app/pages/main/pages/home/home.component.html
+++ b/src/app/pages/main/pages/home/home.component.html
@@ -1,1 +1,3 @@
-<app-post *ngFor="let item of posts" class="mb-5" [post]="item"></app-post>
+<app-request-wrapper #postsData [request$]="postsData$">
+  <app-post *ngFor="let item of postsData.data" class="mb-5" [post]="getPost | executeWith : item"></app-post>
+</app-request-wrapper>
