KAM-55: [FE] Reactive grid Added `app-grid` component

--- a/src/app/pages/main/pages/servers/servers.component.html
+++ b/src/app/pages/main/pages/servers/servers.component.html
@@ -1,1 +1,10 @@
+<ng-container *ngIf="getData$ | async"></ng-container>
+
 <app-request-wrapper class="mb-5" [request$]="error_500$"></app-request-wrapper>
+
+<app-grid
+  [settingValue]="GRID_SETTING"
+  [headerData]="GRID_COLUMNS"
+  [listOfData]="listOfData"
+  [displayData]="listOfData"
+></app-grid>
