--- a/src/app/widgets/reactive-fields/reactive-textarea/reactive-textarea.component.html
+++ b/src/app/widgets/reactive-fields/reactive-textarea/reactive-textarea.component.html
@@ -1,4 +1,4 @@
-<nz-form-item *ngIf="control">
+<nz-form-item *ngIf="control" [class.validation]="control.dirty && (getErrorMessage | executeWith : control.errors)">
   <nz-form-label
     [nzFor]="fieldId"
     [nzRequired]="hasRequiredValidator"
