KAM-67: [FE] `Reply to` button Added `Reply to comment` functionality

--- a/src/app/pages/main/pages/devblog/devblog.component.html
+++ b/src/app/pages/main/pages/devblog/devblog.component.html
@@ -1,5 +1,3 @@
 <!--<app-request-wrapper class="mb-5" [request$]="error_500$"></app-request-wrapper>-->
 
-<ng-container *ngFor="let comment of MOCKED_DATA_COMMENT">
-  <app-comment [comment]="comment"></app-comment>
-</ng-container>
+<app-comment *ngFor="let comment of MOCKED_DATA_COMMENT" [comment]="comment"></app-comment>
