--- a/src/app/pages/main/pages/devblog/devblog.component.html
+++ b/src/app/pages/main/pages/devblog/devblog.component.html
@@ -1,3 +1,3 @@
 <!--<app-request-wrapper class="mb-5" [request$]="error_500$"></app-request-wrapper>-->
 
-<app-comment *ngFor="let comment of MOCKED_DATA_COMMENT" [comment]="comment"></app-comment>
+<app-comment [commentData]="MOCKED_DATA_COMMENT"></app-comment>
