--- a/src/app/widgets/comment/comment.component.html
+++ b/src/app/widgets/comment/comment.component.html
@@ -1,35 +1,23 @@
-<ng-template [ngTemplateOutlet]="commentTemplateRef" [ngTemplateOutletContext]="{ comment: comment }"></ng-template>
+<ng-container *ngFor="let comment of commentData; index as commentIndex">
+  <ng-template
+    [ngTemplateOutlet]="commentTemplateRef"
+    [ngTemplateOutletContext]="{ comment, commentIndex: commentIndex + '' }"
+  ></ng-template>
+</ng-container>
 
-<nz-comment
-  *ngIf="showReplyForm"
-  [class.show-animation]="showReplyForm"
-  [class.hide-animation]="!showReplyForm"
-  [nzAuthor]="currentUser.name"
->
-  <nz-avatar nz-comment-avatar nzIcon="user" [nzSrc]="currentUser.avatar"></nz-avatar>
-  <nz-comment-content>
-    <app-reactive-textarea
-      [rows]="4"
-      [minRows]="4"
-      [maxRows]="8"
-      [noValidationMark]="true"
-      [control]="replyForm.controls.content"
-    ></app-reactive-textarea>
-    <div class="d-flex content-end gap-2">
-      <app-button label="Cancel" [action$]="cancelComment"></app-button>
-      <app-button label="Send" type="primary" [action$]="sendComment$"></app-button>
-    </div>
-  </nz-comment-content>
-</nz-comment>
-
-<ng-template #commentTemplateRef let-comment="comment">
+<ng-template #commentTemplateRef let-comment="comment" let-commentIndex="commentIndex">
   <nz-comment [nzAuthor]="comment.author" [nzDatetime]="comment.time">
     <nz-avatar nz-comment-avatar nzIcon="user" [nzSrc]="comment.avatar"></nz-avatar>
     <nz-comment-content
       ><p>{{ comment.content }}</p></nz-comment-content
     >
     <nz-comment-action>
-      <span nz-icon [nzType]="likeIcon" [nzTheme]="comment.liked ? 'twotone' : 'outline'" (click)="like()"></span>
+      <span
+        nz-icon
+        [nzType]="likeIcon"
+        [nzTheme]="comment.liked ? 'twotone' : 'outline'"
+        (click)="like(comment)"
+      ></span>
       <span class="ml-2">{{ comment.likeCount }}</span>
     </nz-comment-action>
 
@@ -38,16 +26,53 @@
         nz-icon
         [nzType]="dislikeIcon"
         [nzTheme]="comment.disliked ? 'twotone' : 'outline'"
-        (click)="dislike()"
+        (click)="dislike(comment)"
       ></span>
       <span class="ml-2">{{ comment.dislikeCount }}</span>
     </nz-comment-action>
-    <nz-comment-action><span (click)="replyTo()">Reply to</span></nz-comment-action>
-    <ng-container *ngIf="comment.children && comment.children.length">
-      <ng-template ngFor let-child [ngForOf]="comment.children">
-        <ng-template [ngTemplateOutlet]="commentTemplateRef" [ngTemplateOutletContext]="{ comment: child }">
-        </ng-template>
-      </ng-template>
+    <nz-comment-action><span (click)="replyTo(commentIndex)">Reply to</span></nz-comment-action>
+
+    <ng-template
+      *ngIf="!comment.children?.length"
+      [ngTemplateOutlet]="replyCommentTemplateRef"
+      [ngTemplateOutletContext]="{ replyComment: comment, commentIndex: commentIndex }"
+    ></ng-template>
+
+    <ng-container *ngFor="let child of comment.children; index as childIndex">
+      <ng-template
+        [ngTemplateOutlet]="commentTemplateRef"
+        [ngTemplateOutletContext]="{ comment: child, commentIndex: commentIndex + childIndex }"
+      ></ng-template>
     </ng-container>
+
+    <ng-template
+      *ngIf="comment.children?.length"
+      [ngTemplateOutlet]="replyCommentTemplateRef"
+      [ngTemplateOutletContext]="{ replyComment: comment, commentIndex: commentIndex }"
+    ></ng-template>
+  </nz-comment>
+</ng-template>
+
+<ng-template #replyCommentTemplateRef let-replyComment="replyComment" let-commentIndex="commentIndex">
+  <nz-comment
+    *ngIf="showReplyForm | executeWith : commentIndex : indexOfReplyFormShown"
+    [class.show-animation]="showReplyForm"
+    [class.hide-animation]="!showReplyForm"
+    [nzAuthor]="currentUser.name"
+  >
+    <nz-avatar nz-comment-avatar nzIcon="user" [nzSrc]="currentUser.avatar"></nz-avatar>
+    <nz-comment-content>
+      <app-reactive-textarea
+        [rows]="4"
+        [minRows]="4"
+        [maxRows]="8"
+        [noValidationMark]="true"
+        [control]="replyForm.controls.content"
+      ></app-reactive-textarea>
+      <div class="d-flex content-end gap-2">
+        <app-button label="Cancel" [action$]="cancelComment"></app-button>
+        <app-button label="Send" type="primary" [action$]="sendComment$ | executeWith : replyComment"></app-button>
+      </div>
+    </nz-comment-content>
   </nz-comment>
 </ng-template>
