KAM-67: [FE] `Reply to` button Added `reply counter`

--- a/src/app/widgets/comment/comment.component.html
+++ b/src/app/widgets/comment/comment.component.html
@@ -6,7 +6,12 @@
 </ng-container>
 
 <ng-template #commentTemplateRef let-comment="comment" let-commentIndex="commentIndex">
-  <nz-comment [nzAuthor]="comment.author" [nzDatetime]="comment.time">
+  <nz-comment
+    [class.reply-counter-line]="comment.children?.length"
+    [nzAuthor]="comment.author"
+    [nzDatetime]="comment.time"
+  >
+    <nz-badge *ngIf="comment.children?.length" class="reply-counter" [nzCount]="comment.children.length"></nz-badge>
     <nz-avatar nz-comment-avatar nzIcon="user" [nzSrc]="comment.avatar"></nz-avatar>
     <nz-comment-content
       ><p>{{ comment.content }}</p></nz-comment-content
