--- a/src/app/widgets/comment/comment.component.scss
+++ b/src/app/widgets/comment/comment.component.scss
@@ -1,3 +1,5 @@
+@use 'styles/colors' as var;
+
 .show-animation {
   animation: fade-in 1s;
 }
@@ -21,5 +23,35 @@
   }
   to {
     opacity: 0;
+  }
+}
+
+.reply-counter-line {
+  &:before {
+    content: ' ';
+    position: absolute;
+    height: 16px;
+    border-left: 1px solid var.$blue-color-3;
+    left: 16px;
+    top: 64px;
+  }
+  &:after {
+    content: ' ';
+    position: absolute;
+    border-left: 1px solid var.$blue-color-3;
+    left: 16px;
+    top: 116px;
+    bottom: 0;
+  }
+}
+
+.reply-counter {
+  position: absolute;
+  left: 7px;
+  top: 88px;
+
+  ::ng-deep .ant-badge-count {
+    color: var.$grey-color-6;
+    background-color: var.$blue-color-1;
   }
 }
