KAM-23: [FE] Create `NO FOUND 404` page Added `no-page` component Added styles

--- a/styles/custom-bootstrap/_text.scss
+++ b/styles/custom-bootstrap/_text.scss
@@ -16,6 +16,18 @@ $weights: (
   }
 }
 
+$text-transform: (
+  'capitalize': capitalize,
+  'uppercase': uppercase,
+  'lowercase': lowercase,
+);
+
+@each $transform, $prop in $text-transform {
+  .text-#{$transform} {
+    text-transform: $prop !important;
+  }
+}
+
 @for $size from 12 through 24 {
   .font-size-#{$size} {
     font-size: #{$size}px;
