--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,10 @@ body {
   height: 100%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
