KAM-72: [FE] Create `AUTHORISATION` page Added `sign-in` page Added `sign-up` page Changed some styles

--- a/src/app/pages/no-page/no-page.component.scss
+++ b/src/app/pages/no-page/no-page.component.scss
@@ -6,6 +6,7 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
+  background-color: var.$blue-color-1;
 }
 
 .container {
@@ -13,5 +14,6 @@
   min-width: 300px;
   min-height: 300px;
   border: 1px solid var.$grey-color-3;
-  background-color: var.$blue-color-1;
+  box-shadow: 10px 10px 20px var.$grey-color-3;
+  background-color: var.$white-color;
 }
