--- a/src/app/pages/authorize/pages/recover-account/recover-account.component.html
+++ b/src/app/pages/authorize/pages/recover-account/recover-account.component.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="right-container d-flex flex-column gap-4 p-8 pt-10">
-  <h1 class="align-self-center font-weight-medium mb-10" [style.font-size.px]="32">Recover your account</h1>
+  <h1 class="align-self-center font-weight-medium mb-10" [style.font-size.px]="32">Recover account</h1>
   <div class="d-flex flex-column text-grey-3">
     <p class="m-0">Enter your username and you will receive a mail to recover your account.</p>
   </div>
