KAM-72: [FE] Create `AUTHORISATION` page Rename title

--- a/src/app/pages/authorize/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/authorize/pages/sign-up/sign-up.component.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="right-container d-flex flex-column gap-4 p-8 pt-10">
-  <h1 class="align-self-center font-weight-medium mb-10" [style.font-size.px]="32">Create an account</h1>
+  <h1 class="align-self-center font-weight-medium mb-10" [style.font-size.px]="32">Create account</h1>
   <div class="d-flex flex-column text-grey-3">
     <div class="d-flex align-items-center">
       <p class="m-0">Already have an account?</p>
