--- a/src/app/widgets/reactive-fields/reactive-select/reactive-select.component.html
+++ b/src/app/widgets/reactive-fields/reactive-select/reactive-select.component.html
@@ -1,7 +1,7 @@
 <nz-form-item *ngIf="control" [class.validation]="control.dirty && (getErrorMessage | executeWith : control.errors)">
   <nz-form-label
     [nzFor]="fieldId"
-    [nzRequired]="hasRequiredValidator"
+    [nzRequired]="!noValidationMark && hasRequiredValidator"
     [nzTooltipTitle]="tooltipTitle"
     [nzTooltipIcon]="tooltipIcon"
     [nzLabelAlign]="labelAlign"
