--- a/src/app/widgets/reactive-fields/reactive-text-editor/reactive-text-editor.component.html
+++ b/src/app/widgets/reactive-fields/reactive-text-editor/reactive-text-editor.component.html
@@ -15,24 +15,6 @@
     [nzErrorTip]="getErrorMessage | executeWith : control.errors"
     [nzSpan]="fieldSpan"
   >
-    <nz-input-group
-      [nzAddOnBefore]="textBefore"
-      [nzAddOnAfter]="textAfter"
-      [nzPrefix]="prefix"
-      [nzPrefixIcon]="prefixIcon"
-      [nzSuffix]="suffix"
-      [nzSuffixIcon]="suffixIcon"
-      [nzSize]="fieldSize"
-    >
-      <input
-        nz-input
-        [id]="fieldId"
-        [autocomplete]="autocomplete"
-        [formControl]="control"
-        [placeholder]="placeholder"
-        [disabled]="!!isDisabled"
-        (ngModelChange)="valueChange.emit($event)"
-      />
-    </nz-input-group>
+    <quill-editor [style.height.px]="rows * 22" [formControl]="control"></quill-editor>
   </nz-form-control>
 </nz-form-item>
