KAM-82: [FE] Button `Add post` Added `Create news` button Added `app-modal-create-news` modal Refactored some code

--- a/src/app/pages/main/pages/home/widgets/news-card/news-card.component.html
+++ b/src/app/pages/main/pages/home/widgets/news-card/news-card.component.html
@@ -2,7 +2,7 @@
   *ngIf="news"
   [cardTitle]="cardTitleTmpl"
   [contentTitle]="news.contentTitle || ''"
-  [contentDescription]="news.contentDescription || ''"
+  [contentDescription]="contentTmpl"
   [bodyStyle]="{ 'white-space': 'pre-line' }"
 ></app-card>
 
@@ -16,5 +16,11 @@
       </span>
     </div>
     <span>{{ news?.title || '' }}</span>
+  </div>
+</ng-template>
+
+<ng-template #contentTmpl>
+  <div class="ql-snow">
+    <div class="p-0 ql-editor" [innerHtml]="news?.contentDescription"></div>
   </div>
 </ng-template>
