KAM-84: [FE] Widget request wrapper Removed `angular material UI` lib Removed unused `app-toolbar-widgets` component Added `app-request-wrapper` component

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -5,7 +5,7 @@
   </nz-sider>
   <nz-layout>
     <nz-content class="p-10" [ngClass]="isCollapsed ? 'sidebar-collapsed' : 'sidebar-expanded'">
-      <div class="p-10"><router-outlet></router-outlet></div>
+      <div class="p-10 h-100"><router-outlet></router-outlet></div>
     </nz-content>
     <nz-footer>Footer</nz-footer>
   </nz-layout>
