--- a/src/app/pages/main/pages/home/home.component.html
+++ b/src/app/pages/main/pages/home/home.component.html
@@ -1,14 +1,16 @@
-<div class="d-flex flex-column gap-4">
-  <app-button
-    class="align-self-end"
-    type="primary"
-    leftIcon="plus"
-    label="Create news"
-    [action$]="createNews$"
-  ></app-button>
+<app-request-wrapper #requestData [request$]="getData$">
+  <div *ngIf="requestData.hasFirstRs" class="d-flex flex-column gap-4">
+    <app-button
+      class="align-self-end"
+      type="primary"
+      leftIcon="plus"
+      label="Create news"
+      [action$]="createNews$"
+    ></app-button>
 
-  <div *ngFor="let item of MOCKED_DATA_NEWS" class="d-flex flex-column gap-4 mb-4">
-    <app-news-card [news]="item"></app-news-card>
-    <app-comment [commentData]="item?.comments || []"></app-comment>
+    <div *ngFor="let item of toData | executeWith : requestData.data" class="d-flex flex-column gap-4 mb-4">
+      <app-news-card [news]="item"></app-news-card>
+      <app-comment [commentData]="item?.comments || []"></app-comment>
+    </div>
   </div>
-</div>
+</app-request-wrapper>
