KAM-84: [FE] Widget request wrapper Made changes after review

--- a/src/app/pages/no-page/no-page.component.scss
+++ b/src/app/pages/no-page/no-page.component.scss
@@ -17,3 +17,7 @@
   box-shadow: 10px 10px 20px var.$grey-color-3;
   background-color: var.$white-color;
 }
+
+.bad-request {
+  font-size: 64px;
+}
