--- a/src/app/pages/no-page/no-page.component.html
+++ b/src/app/pages/no-page/no-page.component.html
@@ -1,5 +1,5 @@
 <div class="container d-flex flex-column align-items-center content-center gap-8 p-10">
-  <div nz-icon nzType="question-circle" nzTheme="twotone" [style.font-size.px]="64"></div>
+  <div nz-icon class="bad-request" nzType="question-circle" nzTheme="twotone"></div>
   <div class="d-flex flex-column align-items-center content-center gap-2">
     <h1 class="text-capitalize m-0">page not found</h1>
     <h3 class="m-0">We couldn't find the page you're looking for.</h3>
