KAM-86: [FE] Widget grid Added `ag-grid` lib

--- a/src/app/pages/main/pages/home/home.component.html
+++ b/src/app/pages/main/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-request-wrapper #requestData [request$]="getData$">
-  <div *ngIf="requestData.hasFirstRs" class="d-flex flex-column gap-4">
+  <div class="d-flex flex-column gap-4">
     <app-button
       class="align-self-end"
       type="primary"
