--- a/src/app/pages/main/pages/servers/servers.component.html
+++ b/src/app/pages/main/pages/servers/servers.component.html
@@ -1,8 +1,3 @@
-<ng-container *ngIf="getData$ | async"></ng-container>
-
-<app-grid
-  [settingValue]="GRID_SETTING"
-  [headerData]="GRID_COLUMNS"
-  [listOfData]="listOfData"
-  [displayData]="listOfData"
-></app-grid>
+<app-request-wrapper #dataList [request$]="getData$">
+  <app-grid [gridOptions]="gridOptions" [rowData]="$any(dataList.data)"></app-grid>
+</app-request-wrapper>
