--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,5 @@
+@import 'ag-grid-community/styles/ag-grid.css';
+@import 'ag-grid-community/styles/ag-theme-alpine.css';
 @import 'custom-bootstrap/styles';
 @import 'link';
 @import 'validation';
